--- a/src/dialogs/dialog-submit.html
+++ b/src/dialogs/dialog-submit.html
@@ -1,6 +1,5 @@
-<div class="dialog dialog--sm dialog--submit relative overflow-hidden py-10 px-5">
-  <div class="dialog__blur blur color-grey"></div>
-  <div class="flex flex-column align-center justify-center relative">
+<div class="dialog dialog--sm dialog--submit py-10 px-5">
+  <div class="flex flex-column align-center justify-center">
     <div class="text-30 text-lg-40 mb-md-5">
       <svg class="icon zoom-4">
         <use xlink:href="img/icons.svg#success">
