--- a/src/dialogs/dialog-quiz.html
+++ b/src/dialogs/dialog-quiz.html
@@ -1,26 +1,22 @@
 <div class="dialog dialog--lg relative overflow-hidden p-3 p-md-10">
-  <div class="dialog__blur blur color-grey"></div>
-  <div class="bg-block d-none d-md-block pointer-none">
-    <div class="quiz-images relative w-100 h-100 ml-auto">
+  <div class="bg-block d-none d-lg-block pointer-none">
+    <div class="quiz-images relative w-100 h-100">
       <div class="swiper h-100">
         <div class="swiper-wrapper h-100">
           <div class="swiper-slide h-100">
-            <picture>
-              <source srcset="img/pictures/quiz-1.webp" type="image/webp">
-              <img class="d-block h-100 ml-auto" src="img/pictures/quiz-1.png" loading="lazy" alt="">
-            </picture>
-          </div>
-          <div class="swiper-slide h-100">
-            <picture>
-              <source srcset="img/pictures/quiz-2.webp" type="image/webp">
-              <img class="d-block h-100 ml-auto" src="img/pictures/quiz-2.png" loading="lazy" alt="">
-            </picture>
-          </div>
-          <div class="swiper-slide h-100">
-            <picture>
-              <source srcset="img/pictures/quiz-3.webp" type="image/webp">
-              <img class="d-block h-100 ml-auto" src="img/pictures/quiz-3.png" loading="lazy" alt="">
-            </picture>
+            <div class="quiz-images__pack pack pack--photo overflow-visible w-100 ml-auto">
+              <div class="loader">
+                <span class="loader-progress">
+                  <svg class="loader-icon icon">
+                    <use xlink:href="img/icons.svg#loader">
+                  </svg>
+                </span>
+              </div>
+              <picture>
+                <source srcset="img/pictures/main-bg.webp" type="image/webp">
+                <img class="quiz-images__image image" src="img/pictures/main-bg.jpg" loading="lazy" alt="">
+              </picture>
+            </div>
           </div>
         </div>
       </div>
@@ -32,56 +28,55 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide h-auto" data-quiz-slide>
             <div class="p-3 p-lg-6">
-              <h3 class="text-18 text-md-20 text-lg-22 bold-4 lh-1 mb-1">Получите расчет вашего события в течении 1 дня</h3>
-              <h2 class="font-alt text-26 text-md-30 text-lg-36 bold-6 lh-2 mb-5 mb-md-10">Какое планируется событие?</h2>
-              <div class="flex flex-column gap-10 gap-md-6 pt-lg-2">
+              <h3 class="text-16 text-md-20 text-lg-22 bold-4 lh-1 mb-1">Получите расчет вашего тимбилдинга в течении 1 дня</h3>
+              <h2 class="font-alt text-24 text-md-30 text-lg-36 bold-6 lh-2 mb-5 mb-md-10">Какой нужен тимбилдинг?</h2>
+              <div class="flex flex-column gap-6 pt-lg-2">
                 <label class="flex align-center pointer">
-                  <input class="switch switch--radio" type="radio" value="Корпоратив" name="event">
-                  <span class="text-18 text-md-20 text-lg-22 bold-3 ml-3 ml-md-5">Корпоратив</span>
+                  <input class="switch switch--radio" type="radio" value="Активно-спортивный" name="event">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Активно-спортивный</span>
                 </label>
                 <label class="flex align-center pointer">
-                  <input class="switch switch--radio" type="radio" value="Деловое событие" name="event">
-                  <span class="text-18 text-md-20 text-lg-22 bold-3 ml-3 ml-md-5">Деловое событие</span>
+                  <input class="switch switch--radio" type="radio" value="Экстримальный" name="event">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Экстримальный</span>
                 </label>
                 <label class="flex align-center pointer">
-                  <input class="switch switch--radio" type="radio" value="Тимбилдинг" name="event">
-                  <span class="text-18 text-md-20 text-lg-22 bold-3 ml-3 ml-md-5">Тимбилдинг</span>
+                  <input class="switch switch--radio" type="radio" value="Морской" name="event">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Морской</span>
                 </label>
                 <label class="flex align-center pointer">
-                  <input class="switch switch--radio" type="radio" value="Частное событие" name="event">
-                  <span class="text-18 text-md-20 text-lg-22 bold-3 ml-3 ml-md-5">Частное событие</span>
+                  <input class="switch switch--radio" type="radio" value="Игра/Квест" name="event">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Игра/Квест</span>
                 </label>
                 <label class="flex align-center pointer">
-                  <input class="switch switch--radio" type="radio" value="Свадьба" name="event">
-                  <span class="text-18 text-md-20 text-lg-22 bold-3 ml-3 ml-md-5">Свадьба</span>
+                  <input class="switch switch--radio" type="radio" value="Мастер-Класс" name="event">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Мастер-Класс</span>
+                </label>
+                <label class="flex align-center pointer">
+                  <input class="switch switch--radio" type="radio" value="Тур/Экскурсия" name="event">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Тур/Экскурсия</span>
+                </label>
+                <label class="flex align-center pointer">
+                  <input class="switch switch--radio" type="radio" value="Вечеринка" name="event">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Вечеринка</span>
+                </label>
+                <label class="flex align-center pointer">
+                  <input class="switch switch--radio" type="radio" value="Тренинг/Трансформационная программа" name="event">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Тренинг/Трансформационная программа</span>
                 </label>
               </div>
             </div>
           </div>
           <div class="swiper-slide h-auto" data-quiz-slide>
             <div class="p-3 p-lg-6">
-              <h3 class="text-18 text-md-120 text-lg-22 bold-4 lh-1 mb-1">Получите расчет вашего события в течении 1 дня</h3>
-              <h2 class="font-alt text-26 text-md-30 text-lg-36 bold-6 lh-2 mb-5 mb-md-10">Параметры мероприятия</h2>
+              <h3 class="text-16 text-md-20 text-lg-22 bold-4 lh-1 mb-1">Получите расчет вашего тимбилдинга в течении 1 дня</h3>
+              <h2 class="font-alt text-24 text-md-30 text-lg-36 bold-6 lh-2 mb-5 mb-md-10">Параметры мероприятия</h2>
               <div class="quiz__content w-100 pt-lg-2">
                 <label class="form-label mb-6 mb-md-10" data-label="input">
                   <div class="form-wrapper">
                     <div class="input-cover">
-                      <input class="input" data-input="calendar" type="text" placeholder="Дата" name="calendar">
+                      <input class="input color-black" data-input="number" type="text" placeholder="Количество гостей" maxlength="4" name="calendar">
                     </div>
-                    <div class="form-icon form-icon--left color-white text-24 fade-60">
-                      <svg class="icon">
-                        <use xlink:href="img/icons.svg#date">
-                      </svg>
-                    </div>
-                    <span class="form-error anim anim--fade" data-error>Пожалуйста, укажите дату!</span>
-                  </div>
-                </label>
-                <label class="form-label mb-6 mb-md-10" data-label="input">
-                  <div class="form-wrapper">
-                    <div class="input-cover">
-                      <input class="input" data-input="number" type="text" placeholder="Количество гостей" maxlength="4" name="calendar">
-                    </div>
-                    <div class="form-icon form-icon--left color-white text-24 fade-60">
+                    <div class="form-icon form-icon--left text-24 fade-60">
                       <svg class="icon">
                         <use xlink:href="img/icons.svg#users">
                       </svg>
@@ -89,47 +84,73 @@
                     <span class="form-error anim anim--fade" data-error>Пожалуйста, укажите количество!</span>
                   </div>
                 </label>
-                <label class="form-label mb-6 mb-md-10" data-label="input">
+                <label class="form-label" data-label="input">
                   <div class="form-wrapper">
                     <div class="input-cover">
-                      <textarea class="input" data-input type="text" placeholder="Цель мероприятия" name="text"></textarea>
+                      <input class="input color-black" data-input="calendar" type="text" placeholder="Дата" name="calendar">
                     </div>
-                    <div class="form-icon form-icon--left color-white text-24 fade-60">
+                    <div class="form-icon form-icon--left text-24 fade-60">
                       <svg class="icon">
-                        <use xlink:href="img/icons.svg#list">
+                        <use xlink:href="img/icons.svg#date">
                       </svg>
                     </div>
-                    <span class="form-error anim anim--fade" data-error>Пожалуйста, укажите цель!</span>
+                    <span class="form-error anim anim--fade" data-error>Пожалуйста, укажите дату!</span>
                   </div>
                 </label>
-                <label class="form-label mb-5" data-label="input">
-                  <div class="form-wrapper">
-                    <div class="input-cover">
-                      <input class="input" data-input="number" type="text" placeholder="Бюджет мероприятия" name="calendar">
-                    </div>
-                    <div class="form-icon form-icon--left color-white text-24 fade-60">
-                      <svg class="icon">
-                        <use xlink:href="img/icons.svg#wallet">
-                      </svg>
-                    </div>
-                    <span class="form-error anim anim--fade" data-error>Пожалуйста, укажите бюджет!</span>
-                  </div>
-                </label>
-                <p class="text-14 bold-3 lh-1">Если бюджет точно не известен, укажите максимальную сумму, <br class="d-none d-md-block"> которую нельзя превысить</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide h-auto" data-quiz-slide>
             <div class="p-3 p-lg-6">
-              <h3 class="text-18 text-md-20 text-lg-22 bold-4 lh-1 mb-1">Получите расчет вашего события в течении 1 дня</h3>
-              <h2 class="font-alt text-26 text-md-30 text-lg-36 bold-6 lh-2 mb-5 mb-md-10">Оставьте свои контакты</h2>
+              <h3 class="text-16 text-md-20 text-lg-22 bold-4 lh-1 mb-1">Получите расчет вашего тимбилдинга в течении 1 дня</h3>
+              <h2 class="font-alt text-24 text-md-30 text-lg-36 bold-6 lh-2 mb-5 mb-md-10">Что еще необходимо к программе?</h2>
+              <div class="flex flex-column gap-6 pt-lg-2">
+                <label class="flex align-center pointer">
+                  <input class="switch switch--radio" type="radio" value="Авторский сценарий" name="programm">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Авторский сценарий</span>
+                </label>
+                <label class="flex align-center pointer">
+                  <input class="switch switch--radio" type="radio" value="Музыкальное оборудование" name="programm">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Музыкальное оборудование</span>
+                </label>
+                <label class="flex align-center pointer">
+                  <input class="switch switch--radio" type="radio" value="Фотосъемка" name="programm">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Фотосъемка</span>
+                </label>
+                <label class="flex align-center pointer">
+                  <input class="switch switch--radio" type="radio" value="Видеосъемка" name="programm">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Видеосъемка</span>
+                </label>
+                <label class="flex align-center pointer">
+                  <input class="switch switch--radio" type="radio" value="Награждение победителей" name="programm">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Награждение победителей</span>
+                </label>
+                <label class="flex align-center pointer">
+                  <input class="switch switch--radio" type="radio" value="Кейтеринг" name="programm">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Кейтеринг</span>
+                </label>
+                <label class="flex align-center pointer">
+                  <input class="switch switch--radio" type="radio" value="Шоу-программа" name="programm">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Шоу-программа</span>
+                </label>
+                <label class="flex align-center pointer">
+                  <input class="switch switch--radio" type="radio" value="Брендирование продукции" name="programm">
+                  <span class="text-18 text-md-20 text-lg-22 bold-4 fade-60 ml-3 ml-md-5">Брендирование продукции</span>
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide h-auto" data-quiz-slide>
+            <div class="p-3 p-lg-6">
+              <h3 class="text-16 text-md-20 text-lg-22 bold-4 lh-1 mb-1">Получите расчет вашего тимбилдинга в течении 1 дня</h3>
+              <h2 class="font-alt text-24 text-md-30 text-lg-36 bold-6 lh-2 mb-5 mb-md-10">Оставьте свои контакты</h2>
               <div class="quiz__content w-100 pt-lg-2">
                 <label class="form-label mb-6 mb-md-10" data-label="input">
                   <div class="form-wrapper">
                     <div class="input-cover">
-                      <input class="input" data-input="name" type="text" placeholder="Ваше имя" name="name">
+                      <input class="input color-black" data-input="name" type="text" placeholder="Ваше имя" name="name">
                     </div>
-                    <div class="form-icon form-icon--left color-white text-24 fade-60">
+                    <div class="form-icon form-icon--left text-24 fade-60">
                       <svg class="icon">
                         <use xlink:href="img/icons.svg#user">
                       </svg>
@@ -140,9 +161,9 @@
                 <label class="form-label" data-label="input">
                   <div class="form-wrapper">
                     <div class="input-cover">
-                      <input class="input" data-input="tel" type="tel" placeholder="Ваш телефон" name="tel">
+                      <input class="input color-black" data-input="tel" type="tel" placeholder="Ваш телефон" name="tel">
                     </div>
-                    <div class="form-icon form-icon--left color-white text-24 fade-60">
+                    <div class="form-icon form-icon--left text-24 fade-60">
                       <svg class="icon">
                         <use xlink:href="img/icons.svg#tel">
                       </svg>
@@ -156,13 +177,13 @@
         </div>
       </div>
       <div class="flex align-center gap-4 mt-auto pt-6 pb-3 pb-lg-6">
-        <button class="quiz-slider__btn quiz-slider__btn--prev swiper-button-prev default btn btn--white btn--lg btn--fill color-black w-auto mt-0 px-0" data-waved="dark" type="button">
+        <button class="quiz-slider__btn quiz-slider__btn--prev swiper-button-prev default btn btn--grey btn--lg btn--fill color-black w-auto mt-0 px-0" data-waved="dark" type="button">
           <svg class="icon text-12">
             <use xlink:href="img/icons.svg#arrow-left">
           </svg>
         </button>
-        <button class="quiz-slider__btn quiz-slider__btn--next swiper-button-next default btn btn--white btn--lg btn--fill color-black w-auto mt-0 px-10" data-waved="dark" type="button">Следующий <span class="d-none d-md-inline">вопрос</span></button>
-        <button class="quiz-slider__submit d-none btn btn--white btn--lg btn--fill btn--glow color-black px-10" data-waved="dark" type="submit"><span class="d-none d-md-inline">получить</span> расчет</button>
+        <button class="quiz-slider__btn quiz-slider__btn--next swiper-button-next default btn btn--black btn--lg btn--contur color-black w-auto mt-0 px-10" data-waved="dark" type="button">Следующий <span class="d-none d-md-inline">вопрос</span></button>
+        <button class="quiz-slider__submit d-none btn btn--black btn--lg btn--contur px-10" data-waved="dark" type="submit"><span class="d-none d-md-inline">получить</span> расчет</button>
       </div>
     </div>
   </form>
