--- a/src/dialogs/dialog-quiz.html
+++ b/src/dialogs/dialog-quiz.html
@@ -13,8 +13,53 @@
                 </span>
               </div>
               <picture>
-                <source srcset="img/pictures/main-bg.webp" type="image/webp">
-                <img class="quiz-images__image image" src="img/pictures/main-bg.jpg" loading="lazy" alt="">
+                <source srcset="img/pictures/quiz-1.webp" type="image/webp">
+                <img class="quiz-images__image image" src="img/pictures/quiz-1.jpg" loading="lazy" alt="">
+              </picture>
+            </div>
+          </div>
+          <div class="swiper-slide h-100">
+            <div class="quiz-images__pack pack pack--photo overflow-visible w-100 ml-auto">
+              <div class="loader">
+                <span class="loader-progress">
+                  <svg class="loader-icon icon">
+                    <use xlink:href="img/icons.svg#loader">
+                  </svg>
+                </span>
+              </div>
+              <picture>
+                <source srcset="img/pictures/quiz-2.webp" type="image/webp">
+                <img class="quiz-images__image image" src="img/pictures/quiz-2.jpg" loading="lazy" alt="">
+              </picture>
+            </div>
+          </div>
+          <div class="swiper-slide h-100">
+            <div class="quiz-images__pack pack pack--photo overflow-visible w-100 ml-auto">
+              <div class="loader">
+                <span class="loader-progress">
+                  <svg class="loader-icon icon">
+                    <use xlink:href="img/icons.svg#loader">
+                  </svg>
+                </span>
+              </div>
+              <picture>
+                <source srcset="img/pictures/quiz-3.webp" type="image/webp">
+                <img class="quiz-images__image image" src="img/pictures/quiz-3.jpg" loading="lazy" alt="">
+              </picture>
+            </div>
+          </div>
+          <div class="swiper-slide h-100">
+            <div class="quiz-images__pack pack pack--photo overflow-visible w-100 ml-auto">
+              <div class="loader">
+                <span class="loader-progress">
+                  <svg class="loader-icon icon">
+                    <use xlink:href="img/icons.svg#loader">
+                  </svg>
+                </span>
+              </div>
+              <picture>
+                <source srcset="img/pictures/quiz-4.webp" type="image/webp">
+                <img class="quiz-images__image image" src="img/pictures/quiz-4.jpg" loading="lazy" alt="">
               </picture>
             </div>
           </div>
