--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
 <!-- О нас -->
 
 <section class="about container relative bg-grey overflow-hidden py-md-10 mb-md-10">
-  <div class="bg-block fade-60">
+  <div class="about__bg bg-block d-none d-md-block fade-60 w-lg-100 mx-auto">
     <div class="pack w-50 h-100">
       <picture>
         <source srcset="img/pictures/firework.webp" type="image/webp">
@@ -171,7 +171,7 @@
       </picture>
     </div>
   </div>
-  <div class="about__bg bg-block px-md-10">
+  <div class="about__bg bg-block px-md-10 w-lg-100 mx-auto">
     <div class="about__pack pack bg-primary w-100 ml-auto">
       <picture>
         <source srcset="img/pictures/firework.webp" type="image/webp">
@@ -209,7 +209,7 @@
 <!-- Подход -->
 
 <section class="approach container relative overflow-hidden py-md-10">
-  <div class="approach__bg bg-block px-md-10">
+  <div class="approach__bg bg-block w-100 px-md-10 w-lg-100 mx-auto">
     <div class="approach__pack pack pack--rect bg-grey w-100 h-md-100 ml-auto" data-movement="light">
       <div class="loader">
         <span class="loader-progress">
@@ -301,14 +301,14 @@
 <!-- Стоимость -->
 
 <section class="price container relative bg-grey overflow-hidden">
-  <div class="bg-block">
-    <div class="price__pack price__pack--1 pack pack--box d-none d-md-block absolute w-100 linear duration-5 anim anim--increase" data-anim="hidden">
+  <div class="price__bg bg-block d-none d-md-block w-lg-100 mx-auto">
+    <div class="price__pack price__pack--1 pack pack--box absolute w-100 linear duration-5 anim anim--increase" data-anim="hidden">
       <picture>
         <source srcset="img/pictures/firework.webp" type="image/webp">
         <img class="image" src="img/pictures/firework.png" alt="">
       </picture>
     </div>
-    <div class="price__pack price__pack--2 pack pack--box d-none d-md-block absolute w-100 linear duration-5 anim anim--increase" data-anim="hidden">
+    <div class="price__pack price__pack--2 pack pack--box absolute w-100 linear duration-5 anim anim--increase" data-anim="hidden">
       <picture>
         <source srcset="img/pictures/firework.webp" type="image/webp">
         <img class="image" src="img/pictures/firework.png" alt="">
@@ -465,15 +465,15 @@
 <!-- Обратная связь -->
 
 <section class="feedback container relative bg-grey overflow-hidden">
-  <div class="bg-block">
-    <div class="pack pack--box d-none d-md-block w-50 h-100 ml-auto linear duration-5 anim anim--increase" data-anim="hidden">
+  <div class="feedback__bg bg-block d-none d-md-block w-lg-100 mx-auto">
+    <div class="pack pack--box w-50 h-100 ml-auto linear duration-5 anim anim--increase" data-anim="hidden">
       <picture>
         <source srcset="img/pictures/firework.webp" type="image/webp">
         <img class="feedback__image image image--br" src="img/pictures/firework.png" alt="">
       </picture>
     </div>
   </div>
-  <div class="feedback__bg bg-block">
+  <div class="feedback__bg bg-block w-lg-100 mx-auto">
     <div class="feedback__pack pack pack--rect bg-grey w-100 h-md-100" data-movement="light">
       <div class="loader">
         <span class="loader-progress">
@@ -621,14 +621,14 @@
 ]; %>
 
 <section class="reviews container relative bg-grey overflow-hidden">
-  <div class="bg-block">
-    <div class="reviews__pack reviews__pack--1 pack pack--box d-none d-md-block absolute w-100 linear duration-5 anim anim--increase" data-anim="hidden">
+  <div class="reviews__bg bg-block d-none d-md-block w-lg-100 mx-auto">
+    <div class="reviews__pack reviews__pack--1 pack pack--box absolute w-100 linear duration-5 anim anim--increase" data-anim="hidden">
       <picture>
         <source srcset="img/pictures/firework.webp" type="image/webp">
         <img class="reviews__image image" src="img/pictures/firework.png" alt="">
       </picture>
     </div>
-    <div class="reviews__pack reviews__pack--2 pack pack--box d-none d-md-block absolute w-100 linear duration-5 anim anim--increase" data-anim="hidden">
+    <div class="reviews__pack reviews__pack--2 pack pack--box absolute w-100 linear duration-5 anim anim--increase" data-anim="hidden">
       <picture>
         <source srcset="img/pictures/firework.webp" type="image/webp">
         <img class="image" src="img/pictures/firework.png" alt="">
